# rust-gitcat

./: Cargo.toml  Makefile  README.md  flake.nix
.beads/: issues.jsonl
.github/workflows/: publish.yml  release.yml
src/: main.rs
