[package]
name = "conao3-gitcat"
version = "0.1.0"
edition = "2024"
description = "Preview your repository as GitHub would see it, before publishing"
license = "MIT"
repository = "https://github.com/conao3/rust-gitcat"
keywords = ["git", "github", "preview", "gitignore"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitcat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
